--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,26 @@
-name: Docker Image CI
+# name: Docker Image CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
 
-jobs:
+# jobs:
 
-  build:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file swoole.dockerfile --tag laravels:$(date +%s)
+#     steps:
+#       - name: Check out the repo
+#         uses: actions/checkout@v2
+#       # - name: Build the Docker image
+#       #   run: docker build . --file swoole.dockerfile --tag laravels:$(date +%s)
+#       - name: Push to Docker Hub
+#         uses: docker/build-push-action@v1
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#           repository: my-docker-hub-namespace/my-docker-hub-repository
+#           tag_with_ref: true
